--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/marked": "^5.0.2",
     "browser-image-compression": "^2.0.2",
     "crypto-js": "^4.2.0",
     "framer-motion": "^12.23.24",
     "jszip": "^3.10.1",
     "lucide-react": "^0.554.0",
+    "marked": "^17.0.1",
     "pica": "^9.0.1",
     "qr-code-styling": "^1.9.2",
     "qrcode.react": "^4.2.0",
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^24.10.1",
     "@types/pica": "^9.0.5",
